reduced contact form contrast and fixed open keypad issue with mobile device

--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,6 @@ $text-color: white;
 	padding: 0;
 	margin: 0;
 	-webkit-tap-highlight-color: transparent;
-	overflow: hidden;
 }
 
 //---------------- Styles -------------------//
@@ -115,10 +114,6 @@ body {
 		text-align: center;
 		padding: 1rem;
 
-		&_chrissy {
-			padding-top: 4rem;
-		}
-
 		label {
 			font-family: 'Acme', sans-serif;
 			font-size: 1rem;
@@ -140,7 +135,7 @@ body {
 			width: 50vw;
 			background: transparent;
 			border: none;
-			border-bottom: 2px solid $text-color;
+			border-bottom: 2px solid rgba($text-color, 0.3);
 			padding: 0.5rem;
 			color: $text-color;
 
@@ -154,7 +149,7 @@ body {
 			width: 50vw;
 			background: transparent;
 			border: none;
-			border-bottom: 2px solid $text-color;
+			border-bottom: 2px solid rgba($text-color, 0.3);
 			padding: 0.5rem;
 			color: $text-color;
 
@@ -172,6 +167,16 @@ body {
 		width: 80%;
 		padding: 1rem;
 		text-align: center;
+
+		&_form {
+			position: fixed;
+			top: 100px;
+		}
+
+		.landingpage-title {
+			padding: 2rem;
+			font-family: 'Acme', sans-serif;
+		}
 
 		.chrissy {
 			padding-bottom: 1rem;
